--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,42 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    
+    <!-- Viewport for Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Primary Meta Tags -->
+    <title>Minna & Minnie | Premium Baby Products</title>
+    <meta name="title" content="Minna & Minnie | Premium Baby Garments, Toys, Shoes & More" />
+    <meta name="description" content="Discover high-quality baby garments, accessories, toys, sport wears, and shoes at Minna & Minnie. Free shipping on prepaid orders. Designed with love." />
+    <meta name="keywords" content="baby garments, baby accessories, baby toys, baby shoes, sport wears, Minna & Minnie, kids clothing, baby products Pakistan" />
+    <meta name="author" content="Sami Ullah" />
+    <meta name="theme-color" content="#ff69b4" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://minnaminnie.vercel.app/" />
+    <meta property="og:title" content="Minna & Minnie | Premium Baby Products" />
+    <meta property="og:description" content="Shop quality baby garments, accessories, toys, sport wears & shoes. Free shipping on prepaid orders." />
+    <meta property="og:image" content="https://minnaminnie.vercel.app/logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://minnaminnie.vercel.app/" />
+    <meta property="twitter:title" content="Minna & Minnie | Premium Baby Products" />
+    <meta property="twitter:description" content="Shop baby garments, accessories, toys, sport wears & shoes at affordable prices." />
+    <meta property="twitter:image" content="https://minnaminnie.vercel.app/logo.png" />
+
+    <!-- JSON-LD Structured Data for Google -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Minna & Minnie",
+        "url": "https://minnaminnie.vercel.app/",
+        "logo": "https://minnaminnie.vercel.app/logo.png"
+      }
+    </script>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
